overflow-x and leftward-tooltip fixes

--- a/webui/react/src/components/kit/LineChart.module.scss
+++ b/webui/react/src/components/kit/LineChart.module.scss
@@ -1,7 +1,6 @@
 .chartgridContainer {
   background-color: #f0f0f0;
   min-height: 530px;
-  overflow-x: visible;
   overflow-y: hidden;
   padding: 5px;
 }
@@ -15,7 +14,6 @@
   background-color: #f6f6f6;
   border: 1px solid #c2c2c2;
   border-radius: 4px;
-  overflow-x: visible;
   padding: 24px;
 }
 .chartTitle {
