--- a/webui/react/src/shared/styles/index.scss
+++ b/webui/react/src/shared/styles/index.scss
@@ -51,6 +51,9 @@ code.block {
 .uplot canvas {
   background-color: var(--theme-stage);
 }
+.u-wrap {
+  overflow-x: hidden;
+}
 
 /* diamond cursor for most charts, see closestPointPlugin.module.scss for charts with that plugin (LearningCurve) */
 
